--- a/position.css
+++ b/position.css
@@ -1,6 +1,9 @@
 .page { 
 	overflow:hidden;
 }
+.position{
+	z-index: 999;
+}
 .page { 
 	background-color:rgba(255, 255, 255, 1);
 	width:1440px;
@@ -32,17 +35,10 @@
 		transform: scale(1.05);
 	}
 
-.banner { 
-	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-	width:1440px;
-	height:237px;
-	position:absolute;
-	left:0px;
-	top:0px;
-	background-image:url(position/banner.png);
-	background-repeat:no-repeat;
-	background-size:cover;
+h2{
+	color: black;
 }
+
 .position5_cont { 
 	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
 	background-color:rgba(0, 0, 0, 1);
