--- a/view-scores.css
+++ b/view-scores.css
@@ -27,6 +27,11 @@ input[type="submit"]{
   cursor: pointer;
 }
 
+#rs:hover{
+  transform: scale(1.05);
+  color: white;
+}
+
 .votingResults{
   align-items: flex-start;
   border: 1px none;
@@ -67,16 +72,12 @@ input[type="submit"]{
 .dash{
   background-color: #ff6624;
   width: 35%;
-  height: 100%;
+  height: 700px;
   align-content: space-evenly;
   padding-bottom: 80px;
+  transform: translate(0px, -20px);
 }
 
-.dashRow{
-  display: flex;
-  align-items: center;
-  margin-top: 10px;
-}
 
 #dash{
   width: 100px;
@@ -89,7 +90,9 @@ input[type="submit"]{
   height: 90px;
   background-color: #ffffff;
   color: #000000;
-  margin: 20px 0px;
+  margin: 40px 0px;
+  font-family: exo;
+  font-size: 40px;
 }
 
 #dashItem[value="View Scores"]{
@@ -154,9 +157,11 @@ input[type="submit"]{
 }
 
 .footer{
+  position: absolute;
   background-color: #ff6624;
   color: #ffffff;
   width: 100%;
   height: 70px;
   font-size: 20px;
+  transform: translate(0px, 900px);
 }
