--- a/contacts.css
+++ b/contacts.css
@@ -1,389 +1,93 @@
-.page { 
-	overflow:hidden;
-}
-.page { 
-	background-color:rgba(255, 255, 255, 1);
-	width:1440px;
-	height:1024px;
-	position:absolute;
-}
-.banner { 
-	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-	width:1440px;
-	height:237px;
-	position:absolute;
-	left:0px;
-	top:0px;
-	background-image:url(contacts/banner.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.logo { 
-	width:198px;
-	height:187px;
-	position:absolute;
-	left:38px;
-	top:50px;
-	border-top-left-radius:46px;
-	border-top-right-radius:46px;
-	border-bottom-left-radius:46px;
-	border-bottom-right-radius:46px;
-	background-image:url(contacts/334619451_123195227246301_2336642774933105457_n_removebg_preview_1.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-	background-color: transparent;
-	border: none;
-	cursor: pointer;
-	}
-	.logo:hover{
-		opacity: 50%;
-	}
-.voter { 
-	color:rgba(0, 0, 0, 1);
-	width:80px;
-	height:32px;
-	position:absolute;
-	left:874px;
-	top:268px;
-	font-family:'Exo';
-	text-align:center;
-	font-size:25px;
-	letter-spacing:0;
-	border: none;
-	background-color: transparent;
-	cursor: pointer;
-	}
-	.voter:hover {
-		transform: scale(1.05);
-		font-size: 28px;
-		opacity: 50%;
-	}
-.admin { 
-	color:rgba(0, 0, 0, 1);
-	width:90px;
-	height:32px;
-	position:absolute;
-	left:1003px;
-	top:268px;
-	font-family: 'Exo';
-	text-align:center;
-	letter-spacing:0;
-	border: none;
-	background-color: transparent;
-	cursor: pointer;
-	font-size: 25px;
-	}
-	.admin:hover {
-		transform: scale(1.05);
-		font-size: 28px;
-		opacity: 50%;
+.contact{
+	width: 100%;
+	display: flex;
+	margin: 1% 0%;
+  }
 
-	}
-.about_us { 
-	color:rgba(0, 0, 0, 1);
-	width:110px;
-	height:32px;
-	position:absolute;
-	left:1297px;
-	top:268px;
-	white-space: nowrap;
-	font-family: 'Exo';
-	text-align:center;
-	font-size:25px;
-	letter-spacing:0;
-	border: none;
-	background-color: transparent;
-	cursor: pointer;
-	}
-	.about_us:hover {
-		transform: scale(1.05);
-		font-size: 28px;
-		opacity: 50%;
-	}
-.copyright_cont { 
-	background-color:rgba(255, 102.29653760790825, 36.124995946884155, 1);
-	width:1440px;
-	height:68px;
-	position:absolute;
-	left:0px;
-	top:956px;
-}
-.upvisayas { 
-	color:rgba(255, 255, 255, 1);
-	width:399px;
-	height:32px;
-	position:absolute;
-	left:1003px;
-	top:26px;
-	font-family: 'Exo';
-	text-align:left;
-	font-size:24px;
-	letter-spacing:0;
-}
-.copyright { 
-	color:rgba(255, 255, 255, 1);
-	width:1220px;
-	height:68px;
-	position:absolute;
-	left:110px;
-	top:980px;
-	font-family: 'Exo';
-	text-align:center;
-	font-size:20px;
-	letter-spacing:0;
-}
-.contacts_nav { 
-	color:rgba(0, 0, 0, 1);
-	width:110px;
-	height:32px;
-	position:absolute;
-	left:1138px;
-	top:268px;
-	font-family: 'Exo';
-	text-align:center;
-	font-size:25px;
-	letter-spacing:0;
-	border: none;
-	cursor: pointer;
-	background-color: transparent;
-	}
-	.contacts_nav:hover {
-		transform: scale(1.05);
-		font-size: 28px;
-		opacity: 50%;
+  .info{
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: 20px;
+  }
 
-	}
-.contact_btn { 
-	background-color:rgba(255, 200.53618490695953, 7.437492907047272, 1);
-	width:175px;
-	height:58px;
-	position:absolute;
-	left:1060px;
-	top:850px;
-	border-radius:20px;
-	color: rgba(0, 0, 0, 1);
-	font-family: 'Exo 2';
-	text-align: center;
-	font-size: 30px;
-	letter-spacing: 0;
-	border: none;
-	cursor: pointer;
-	}
-	.contact_btn:hover {
-		transform: scale(1.03);
-		color: white;
-	}
+  .deets{
+	width: 90%;
+	display: flex;
+	align-items: center;
+	column-gap: 20px;
+  }
 
-.fullname { 
-	color:rgba(5.312500158324838, 4.692708291113377, 4.692708291113377, 1);
-	width:123px;
-	height:30px;
-	position:absolute;
-	left:786px;
-	top:543px;
-	font-family: 'Exo 2';
-	text-align:center;
-	font-size:20px;
-	letter-spacing:0;
-}
-.inp_emailcont { 
-	background-color:rgba(255, 255, 255, 1);
-	width:441px;
-	height:67px;
-	position:absolute;
-	left:927px;
-	top:608px;
-	border-radius:20px;
-}
-.inp_emailcont { 
-	border:1px solid rgba(0, 0, 0, 1);
-}
-.email { 
-	color:rgba(5.312500158324838, 4.692708291113377, 4.692708291113377, 1);
-	width:123px;
-	height:30px;
-	position:absolute;
-	left:786px;
-	top:627px;
-	font-family: 'Exo 2';
-	text-align:right;
-	font-size:20px;
-	letter-spacing:0;
-}
-.inp_messagecont { 
-	background-color:rgba(255, 255, 255, 1);
-	width:436px;
-	height:130px;
-	position:absolute;
-	left:927px;
-	top:701px;
-	border-radius:20px;
-}
-.inp_messagecont { 
-	border:1px solid rgba(0, 0, 0, 1);
-}
-.inp_message { 
-	color:rgba(0, 0, 0, 0.30000001192092896);
-	width:410px;
-	height:58px;
-	position:absolute;
-	left:861px;
-	top:715px;
-	font-family: 'Exo';
-	text-align:center;
-	font-size:24px;
-	letter-spacing:0;
-}
-.message { 
-	color:rgba(5.312500158324838, 4.692708291113377, 4.692708291113377, 1);
-	width:123px;
-	height:30px;
-	position:absolute;
-	left:786px;
-	top:711px;
-	font-family: 'Exo 2';
-	text-align:right;
-	font-size:20px;
-	letter-spacing:0;
-}
-.inp_namecont { 
-	background-color:rgba(255, 255, 255, 1);
-	width:441px;
-	height:67px;
-	position:absolute;
-	left:927px;
-	top:524px;
-	border-radius:20px;
-}
-.inp_namecont { 
-	border:1px solid rgba(0, 0, 0, 1);
-}
-.inp_name { 
-	color:rgba(0, 0, 0, 0.30000001192092896);
-	width:410px;
-	height:58px;
-	position:absolute;
-	left:825px;
-	top:543px;
-	font-family: 'Exo';
-	text-align:center;
-	font-size:24px;
-	letter-spacing:0;
-}
-.inp_email { 
-	color:rgba(0, 0, 0, 0.30000001192092896);
-	width:410px;
-	height:58px;
-	position:absolute;
-	left:855px;
-	top:628px;
-	font-family: 'Exo';
-	text-align:center;
-	font-size:24px;
-	letter-spacing:0;
-}
-.group_photo { 
-	box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-	background-color:rgba(0, 0, 0, 0.20000000298023224);
-	width:473px;
-	height:276px;
-	position:absolute;
-	left:110px;
-	top:524px;
-	border-top-left-radius:20px;
-	border-top-right-radius:20px;
-	border-bottom-left-radius:20px;
-	border-bottom-right-radius:20px;
-	background-image:url(contacts/image_16.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.contact_usbanner { 
-	width:1454px;
-	height:156px;
-	position:absolute;
-	left:0px;
-	top:324px;
-	background-image:url(contacts/rectangle_230.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.contact_us { 
-	color:rgba(255, 255, 255, 1);
-	width:228px;
-	height:48px;
-	position:absolute;
-	left:639px;
-	top:378px;
-	font-family: 'Exo 2';
-	text-align:left;
-	font-size:40px;
-	letter-spacing:0;
-}
-.address_icon { 
-	width:26px;
-	height:23px;
-	position:absolute;
-	left:130px;
-	top:814px;
-	background-image:url(contacts/rectangle_231.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.email_icon { 
-	width:21px;
-	height:21px;
-	position:absolute;
-	left:132px;
-	top:842px;
-	background-image:url(contacts/rectangle_232.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.number_icon { 
-	width:21px;
-	height:21px;
-	position:absolute;
-	left:132px;
-	top:874px;
-	background-image:url(contacts/rectangle_233.png);
-	background-repeat:no-repeat;
-	background-size:cover;
-}
-.official_address { 
-	color:rgba(1.0625000554136932, 1.0625000554136932, 1.0625000554136932, 1);
-	width:224px;
-	height:19px;
-	position:absolute;
-	left:164px;
-	top:818px;
-	white-space: nowrap;
-	font-family: 'Exo 2';
-	text-align:left;
-	font-size:16px;
-	letter-spacing:0;
-}
-.official_email { 
-	color:rgba(1.0625000554136932, 1.0625000554136932, 1.0625000554136932, 1);
-	width:143px;
-	height:19px;
-	position:absolute;
-	left:164px;
-	top:844px;
-	font-family: 'Exo 2';
-	text-align:center;
-	font-size:16px;
-	letter-spacing:0;
-}
-.official_number { 
-	color:rgba(1.0625000554136932, 1.0625000554136932, 1.0625000554136932, 1);
-	width:102px;
-	height:19px;
-	position:absolute;
-	left:162px;
-	top:876px;
-	font-family: 'Exo 2';
-	text-align:center;
-	font-size:16px;
-	letter-spacing:0;
-}
+  .deets img{
+	width: 5%;
+  }
+
+  #r1a{
+	width: 80%;
+	border-radius: 15%;
+  }
+
+  .feedback{
+	width: 50%;
+	display: flex;
+	flex-direction: column;	
+	justify-content: center;
+  }
+
+  form{
+    display: flex;
+    flex-direction: column;
+	width: 100%;
+    align-items: center;
+  }
+
+  .formRow1{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    margin: 10px 10px;
+  }
+
+  .formRow1 label{
+    width: 30%;
+    font-size: 20px;
+    text-align: left;
+    align-self: start;
+  }
+
+  .formRow1 input {
+    width: 65%;
+    border-radius: 5px;
+  }
+
+  .formRow1 textarea {
+    width: 65%;
+    min-height: 200px;
+    resize: vertical;
+    border-radius: 5px;
+  }
+
+  .formRow2{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    margin: 10px 10px;
+  }
+
+  #contact{
+	width: 40%;
+	background-color: #ff6624;
+	color: white;
+	font-size: xx-large;
+	border: none;
+	border-radius: 30px;
+	cursor: pointer;
+  }
+
+  #contact:hover {
+	transform: scale(1.05);
+	
+  }
