--- a/login.css
+++ b/login.css
@@ -24,7 +24,7 @@ input[type="submit"]{
   margin-left: 300px;
 }
 
-.registration {
+.login {
   align-items: flex-start;
   border: 1px none;
   display: flex;
@@ -34,45 +34,31 @@ input[type="submit"]{
 }
 
 .content{
-  display: inline-block;
-  object-fit: cover;
-  margin: 20px 0px 10px 0px;
+  display: flex;
+  justify-content: center;
+  margin: 20px 0px 100px 0px;
   width: 100%;
 }
 
-#ca{
-  width: 750px;
-  height: 125px;
-  margin-left: 80px;
+#ac{
+  width: 600px;
+  height: 100px;
+  margin-top: 30px;
 }
 
-#exit{
-  width: 42px;
-  height: 42px;
-  float: right;
-  margin: 10px 40px 0px 0px;
-}
-
-.formRow{
+.loginField{
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-#regAddr{
-  width: 1045px;
+.loginField input{
+  width: 70%;
   height: 50px;
-  margin: 5px 0px;
+  align-self: center;
+  margin: 7.5px 0px;
 }
 
-.formRow input{
-  width: 1045px;
-  height: 50px;
-  margin: 5px 0px;
-}
-
-.footer{
-  background-color: #ff6624;
-  color: #ffffff;
-  width: 100%;
-  height: 70px;
-  font-size: 20px;
+.loginField a:hover{
+  transform: none;
 }
