--- a/clovers.css
+++ b/clovers.css
@@ -287,7 +287,7 @@ form{
 }
 
 .footer{
-  background-color: #1b6136;
+  background-color: #9fbf1b;
   color: #ffffff;
   width: 100%;
   height: 70px;
