--- a/clovers_homepage.css
+++ b/clovers_homepage.css
@@ -1,197 +1,186 @@
-body {
-    margin: 0;
+.vote_body{
+    width: 100%;
+    display: flex;
   }
-  .background-container {
-    position: absolute;
-    width: 70%;
-    height: 160%;
-    margin-left: 30%;
-    background-image: url(imgfrontend/clovers.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    opacity: 30%; 
-    z-index: -3;
-  }
-  .page {
+  
+  .sidebar {
+    text-align: center;
+    width: 30%;
+    min-height: 500px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    }
-  .banner {
-    width: 100%;
-    height: 220px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-image: url(imgfrontend/banner1.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  #logo {
-    width:198px;
-    height:187px;
-    position:absolute;
-    left:38px;
-    top:30px;
-    background-image:url(imgfrontend/logo2.png);
-    background-size:cover;
-    cursor: pointer;
-    
-  }
-  #logo:hover{
-    opacity: 50%;
-  }
-
-  .UPVTitle2 {
-    color:rgba(255, 255, 255, 1);
-      width:399px;
-      height:32px;
-      position:absolute;
-      left:850px;
-      top:26px;
-      font-family: 'Exo';
-      text-align:left;
-      font-size:24px;
-      letter-spacing:0;
-  }
-
-  .footercolor {
-    width: 100%;
-    height: 15%;
-    background: #378805;
-    opacity: 1;
-    position: absolute;
-    top: 160%;
-    z-index: 3;
-  }
-
-  .copyright { 
-	color: white;
-	width:1220px;
-	height:38px;
-	position:absolute;
-	left:3%;
-	margin-top: 920px;
-	font-family: 'Exo 2';
-	text-align:center;
-	font-size:16px;
-	letter-spacing:0;
-  }
-  .dashboard_cont {
-    background: #26580F;
-    width: 35%;
-    height: 110%;
-    margin-right: 500px;
-    padding-bottom: 100px;
-    position:absolute;
-    top: 220px;
-  }
-
-  h1{
-  color: white;
-	width:399px;
-	height:32px;
-	position:absolute;
-	left:20px;
-	top:10px;
-	font-family: 'Exo 2';
-	text-align: center;
-	font-size:20px;
-	letter-spacing:0;
-  }
-  
-  h3 {
-    font-family: 'Exo 2';
-    font-size: 18px;
-    color: #333;
-    margin-top: 10%;
-    margin-left: 185%;
-    text-align: center;
-    white-space: nowrap;
-    margin-bottom: 0%;
-  }
-  #yearlevel {
-    font-family: 'Exo 2';
-    font-size: 18px;
-    color: #333;
-    margin-top: 23%;
-    margin-left: 183%;
-    text-align: center;
-    white-space: nowrap;
-    margin-bottom: 0%;
-  }
-
-  #candidates {
-    font-family: 'Exo 2';
-    font-size: 18px;
-    color: #333;
-    margin-top: 10%;
-    margin-left: 169%;
-    text-align: center;
-    white-space: nowrap;
-    margin-bottom: 0%;
-  }
-
-  .top-right {
-    font-family: 'Exo 2';
-    position: absolute;
-    margin-top: 230px;
-    text-align: center;
-    line-height: 13px;
-    margin-left: 650px;
-    font-size: 15px;
-
-  }
-  
-  .dashboard_cont button[name="yearLevel"],
-  .dashboard_cont button[name="position"] {
-    margin-top: 5%;
-    background: #378805;
-    font-family: 'Exo 2';
-    width:156px;
-	  height:32px;
-    margin-left: 725px;
-    text-align: center;
-    border-radius: 20px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-bottom: 0%;
+    background-color: rgb(32 98 52);;
     align-items: center;
-    display: inline-block;
-        }
-        .dashboard_cont button[name="yearLevel"]:hover,
-        .dashboard_cont button[name="position"]:hover {
-            background-color: black;
-            color: white;
-        }
-  .dashboard_cont button[name="vote"] {
-    background: #378805;
-    font-family: 'Exo 2';
-    width:100px;
-	  height:25px;
-    margin-left: 190px;
-    border-radius: 20px;
-    cursor: pointer;
-    font-size: 15px;
-    color: white;
-        }
-        .dashboard_cont button[name="vote"]:hover{
-            background-color: black;
-            color: white;
-        }
-  .dashboard_cont li {
-    list-style-type: none;
-    margin-bottom: 10px;
-    margin-left: 750px;
-    font-family: 'Exo 2';
-    margin-top: 5%;
+    justify-content: space-around;
+    padding: 30px;
   }
   
-  .votingbuttons {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
-    border-radius: 5px;
+  .sidebar button {
+    width: 100%;
+    background-color: rgb(159 191 27);
+    color: white;
+    opacity: 0.9;
     text-align: center;
+    font-size: 30px;
+    border-radius: 25px;
+    border: none;
+    margin: 5px;
+    padding: 20px 30px;
+  }
+  
+  .sidebar button:hover{
+    opacity: 1;
+    border-radius: 30px;
+  }
+  
+  .user{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    color: rgb(159 191 27);
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .user *{
+    margin: 0px 10px;
+  }
+  
+  .user img {
+    width: 20px;
+    height: 20px;
+  }
+  
+  .vote_candidates{
+    text-align: center;
+    width: 70%;
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .content{
+    display: flex;
+    width: 100%;
+  }
+  
+    .vote_candidates{
+        width: 70%;
+        display: flex;
+        margin: 0 auto;
+        flex-direction: column;
+        align-items: center;
+        background-image: url(clovers1.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        
+    }
+    
+    .vote_candidates button{
+        color: white;
+        background-color: rgb(159 191 27);
+        padding: 5px 10px;
+        margin: 0px 10px;
+        text-align: center;
+        border-radius: 10px;
+        border: 0px;
+        cursor: pointer;
+        
+    }
+  
+  .settings_display{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    
+    margin: 1.5% 2.5%;
+  }
+  
+  .settings_display p{
+    margin: 1%;
+  }
+  
+  #highlight{
+    font-weight: bold;
+    font-size: x-large;
+  }
+  
+  .cand_yr{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .cand_name ul{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .cand_name li{
+    display: inline;
+    list-style-type: none;
+  }
+  
+  .results{
+    width: 65%;
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .scores{
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .resultExit{
+    width: 100%;
+  }
+  
+  #return{
+    float: right;
+    margin: 10px 40px 0px 0px;
+  }
+  
+  .positions{
+    width: 100%;
+  }
+  
+  .positions select{
+    padding: 0px;
+    font-size: 20px;
+    text-align: center;
+    border: none;
+  }
+  
+  .resultGraph{
+    width: 90%;
+    height: 500px;
+    margin: 20px 0px;
+  }
+  
+  .resultGraph h3{
+    color: #000000;
+  }
+
+  .footer {
+    background-color: rgb(159 191 27);
+  }
+
+  .yearLevelButton{
+    color: white;
+    background-color: rgb(159 191 27);
+    padding: 5px 10px;
+    margin: 0px 10px;
+    text-align: center;
+    border-radius: 10px;
+    border: 0px;
+    cursor: pointer;
   }
