--- a/redbolts_homepage.css
+++ b/redbolts_homepage.css
@@ -9,7 +9,7 @@
   min-height: 500px;
   display: flex;
   flex-direction: column;
-  background-color: #000000;
+  background-color: rgb(163 49 30);
   align-items: center;
   justify-content: space-around;
   padding: 30px;
@@ -17,8 +17,8 @@
 
 .sidebar button {
   width: 100%;
-  background-color: #ff6624;
-  color: #000000;
+  background-color: rgb(255 197 72);
+  color: rgb(163 49 30);
   opacity: 0.9;
   text-align: center;
   font-size: 30px;
@@ -37,7 +37,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  color: #ff6624;
+  color: rgb(255 197 72);
   justify-content: center;
   align-items: center;
 }
@@ -66,25 +66,26 @@
 }
 
 .vote_candidates{
-  width: 70%;
+  width: 50%;
   display: flex;
   margin: 0 auto;
   flex-direction: column;
   align-items: center;
-  background-image: url(elektrons1.png);
+  background-image: url(redbolts.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .vote_candidates button{
-  color: #ff6624;
-  background-color:#000000;
+  color: rgb(163 49 30);
+  background-color: rgb(255 197 72);
   padding: 5px 10px;
   margin: 0px 10px;
   text-align: center;
   border-radius: 10px;
   border: 0px;
   cursor: pointer;
+  
 }
 
 .settings_display{
@@ -165,13 +166,16 @@
   color: #000000;
 }
 
-.yearLevels button{
-  color: #ff6624;
-  background-color:#000000;
-  padding: 5px 10px;
-  margin: 0px 10px;
-  text-align: center;
-  border-radius: 10px;
-  border: 0px;
-  cursor: pointer;
+.adminReset{
+  width: 100%;
 }
+
+#reset{
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.footer {
+  background-color: rgb(255 197 72);
+}
+
