--- a/skimmers.css
+++ b/skimmers.css
@@ -298,3 +298,14 @@
     padding-top: 30px;
     margin: 0px;
   }
+
+  .yearLevelButton{
+    color: white;
+    background-color: rgb(159 191 27);
+    padding: 5px 10px;
+    margin: 0px 10px;
+    text-align: center;
+    border-radius: 10px;
+    border: 0px;
+    cursor: pointer;
+  }
